file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${markdown-editor_SOURCE_DIR}/include/editor/*.hpp")
add_library(editor editor.cpp ${HEADER_LIST})
target_include_directories(editor PUBLIC "${markdown-editor_SOURCE_DIR}/include/")
target_compile_features(editor PUBLIC cxx_std_11)
target_link_libraries(editor PRIVATE imgui)